# mining-investigation-system

./: .env.example  .gitignore  README.md  THESIS_HANDOFF.md  kb_design_writeup.html  note.md  pyproject.toml  requirements.txt  system_architecture.json
data/knowledge_base/: kostenko_knowledge_base.json  rostechnadzor_regulatory_kb_v2.json
notebooks/: demo_kostenko.ipynb  v1_extract_arguments.ipynb
prompts/: DESIGN_DECISIONS.md  _smoke_test.md  agent_1_technical.md  agent_2_organizational.md  agent_3_challenger.md  agent_4_regulatory.md  judge_argument_quality.md  judge_v6_report.md  v5_conflict_check.md  v6_report.md
runs/_pair_cache/: D-A1__agent_1_001__openai_gpt-oss-20b_free__0755b9388401d2a8.json  D-A1__agent_1_001__openai_gpt-oss-20b_free__2a138b13aaeef67c.json  D-A1__agent_1_001__openai_gpt-oss-20b_free__a8a72fed1496fab8.json  D-A1__agent_1_001__openai_gpt-oss-20b_free__bdcc8a346d6b2d1d.json  D-A1__agent_1_001__openai_gpt-oss-20b_free__d6812cb70f8b32a8.json  D-A1__agent_1_001__openai_gpt-oss-20b_free__e1ba88e14d00d6f1.json  D-A1__agent_1_002__70ec64c8cd471a4b.json  (+401 more)
scripts/: build_run_manifest.py  classify_failure_modes.py  demo_kostenko.py  evaluate_argument_quality.py  evaluate_kostenko.py  evaluate_stability.py  evaluate_v6_report.py  ping_openrouter.py  run_v4_kostenko.py  run_v5_kostenko.py  run_v6_kostenko.py
src/: config.py
tests/: conftest.py  test_build_run_manifest.py  test_classify_failure_modes.py  test_config.py  test_evaluate_argument_quality.py  test_evaluate_kostenko.py  test_evaluate_stability.py  test_evaluate_v6_report.py
(+246 files in other folders)
