[project]
name = "mining-investigation-system"
version = "0.1.0"
description = "Multi-agent mining accident investigation system using LLMs and Dung's argumentation semantics."
readme = "note.md"
requires-python = ">=3.10"
authors = [
    { name = "Ridwan A. Adebayo" },
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-v", "--import-mode=importlib"]
